# sstc

./: .gitignore  Cargo.toml  devenv.nix
src/: config.rs  ffprobe.rs  file_check.rs  main.rs  presets.rs  transcoder.rs  watcher.rs
