[package]
name = "sstc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
serde_yaml = "0.9"
tqdm = "0.7.0"
anyhow = "1.0"
notify = "5.2"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.5"
which = "7.0.2"
owo-colors = "4"
